Moved the debug key.

--- a/telek/mod.cfg
+++ b/telek/mod.cfg
@@ -10,8 +10,8 @@ bind B +P0_RELOAD_TIMER
 bind N +P0_WEAPON_ANGLE
 bind Y +P0_TOGGLE_GUI
 bind M +P0_SYNC_RACE
-bind u +P0_KILL_ME
-bind G "tel_debug 1"
+bind U +P0_KILL_ME
+bind H "tel_debug 1"
 
 sv_worm_jump_force 0.9
 sv_worm_acceleration 0.0565
