--- a/telek/mod.cfg
+++ b/telek/mod.cfg
@@ -11,7 +11,7 @@ bind N +P0_WEAPON_ANGLE
 bind Y +P0_TOGGLE_GUI
 bind M +P0_SYNC_RACE
 bind U +P0_KILL_ME
-bind H "tel_debug 1"
+bind J "tel_debug 1"
 
 sv_worm_jump_force 0.9
 sv_worm_acceleration 0.0565
